<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/bg_inicio_dreg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:fontFamily="@font/typo_round_bold_demo"
        android:text="@string/txt_register"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_edit_text"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:drawableTint="@color/borderEdit"
                android:hint="@string/etx_user"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_edit_text"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="10dp"
                android:drawableTint="@color/borderEdit"
                android:hint="@string/etx_login_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_edit_text"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/borderEdit"
                android:ems="10"
                android:hint="@string/etx_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/style_edit_text"
                android:drawableLeft="@drawable/telephone"
                android:drawablePadding="10dp"
                android:drawableTint="@color/borderEdit"
                android:hint="@string/etx_phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="84dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/style_button"
                android:onClick="btnRegistrar"
                android:text="@string/btn_registrarse"
                android:textColor="@color/borderEdit"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>