<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:id="@+id/relativeprincipalhome"
    android:splitMotionEvents="false">

    <LinearLayout
        android:id="@+id/minPerfil"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="23dp"
        android:orientation="horizontal"
        android:background="@drawable/fondo_home_profile">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/account_ci"
            android:paddingStart="10dp"/>

        <LinearLayout
            android:id="@+id/txtnom_txtcarrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvHomeUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Armando Pineda Paredes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/typo_round_bold_demo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/carrera"
                android:drawablePadding="4dp"
                android:text="@string/txt_carrier"
                android:textColor="@color/white"
                android:fontFamily="@font/typo_round_bold_demo"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgNotify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/bell_ring"
            android:paddingEnd="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtWelcomeHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minPerfil"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/typo_round_bold_demo"
        android:text="@string/welcome"
        android:textSize="24dp"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_below="@id/txtWelcomeHome"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp" />

    <LinearLayout
        android:id="@+id/containerPuntos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPager2"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"/>


    <TextView
        android:id="@+id/txtMaterias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/containerPuntos"
        android:layout_marginStart="11dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/typo_round_bold_demo"
        android:text="@string/materias"
        android:textSize="24dp"
        android:textStyle="bold" />



    <GridLayout
        android:id="@+id/gridMaterias"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_below="@id/txtMaterias"
       >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <ProgressBar
            android:id="@+id/progress_materias"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateDuration="@android:integer/config_longAnimTime"
            android:layout_row="0"
            android:indeterminateDrawable="@drawable/progressbar_style"
            android:layout_column="0"
            android:layout_gravity="center">

        </ProgressBar>
    </GridLayout>

    <TextView
        android:id="@+id/txtsinmaterias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMaterias"
        android:text="No hay Materias Registradas"
        android:textSize="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="70dp"
        android:visibility="gone"/>

    <include
        android:id="@+id/msgAccount"
        layout="@layout/msg_internet"
        android:visibility="gone"/>

</RelativeLayout>

